--- a/templates/register.html
+++ b/templates/register.html
@@ -1,41 +1,42 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-  <div class="container">
-    <div class="form-box">
-      <form action="{{ url_for('register')}}" method="POST">
-        <h1>Register</h1>
-        <div class="input-field">
-            <label for="email"><b>Email</b></label>
-            <input id="email" type="text" name="email" value="{{ request.form['email'] }}">
-        </div>
+<div class="container">
+  <div class="form-box">
+    <form action="{{ url_for('register')}}" method="POST">
+      <h1>Register</h1>
+      <div class="input-field">
+        <label for="email"><b>Email</b></label>
+        <input id="email" type="text" name="email" value="{{ request.form['email'] }}">
+      </div>
 
-        <div class="input-field">
-          <label for="username"><b>Username</b></label>
-          <input id="username" type="text" name="username" value="{{ request.form['username'] }}">
-        </div>
-  
-        <div class="input-field">
-          <label for="password"><b>Password</b></label>
-          <input id="password" type="password" name="password" value="{{ request.form['password'] }}">
+      <div class="input-field">
+        <label for="username"><b>Username</b></label>
+        <input id="username" type="text" name="username" value="{{ request.form['username'] }}">
+      </div>
 
-          <div class="password-constraints">
-              <ul>
-                  <p>Your password must contain:</p>
-                  <li id="length">1. At least 8 characters in length</li>
-                  <li id="lowercase">2. Lower case letters (a-z)</li>
-                  <li id="uppercase">3. Upper case letters (A-Z)</li>
-                  <li id="numbers">4. Numbers (0-9)</li>
-              </ul>
-          </div>
-        </div>
-  
-        <div class="input-field">
-          <label for="confirm-password"><b>Confirm Password</b></label>
-          <input id="confirm-password" type="password" name="confirm-password" value="{{ request.form['confirm-password'] }}">
+      <div class="input-field">
+        <label for="password"><b>Password</b></label>
+        <input id="password" type="password" name="password" value="{{ request.form['password'] }}">
+
+        <div class="password-constraints">
+          <ul>
+            <p>Your password must contain:</p>
+            <li id="length">1. At least 8 characters in length</li>
+            <li id="lowercase">2. Lower case letters (a-z)</li>
+            <li id="uppercase">3. Upper case letters (A-Z)</li>
+            <li id="numbers">4. Numbers (0-9)</li>
+          </ul>
         </div>
       </div>
 
+      <div class="input-field">
+        <label for="confirm-password"><b>Confirm Password</b></label>
+        <input id="confirm-password" type="password" name="confirm-password"
+          value="{{ request.form['confirm-password'] }}">
+      </div>
       <button type="submit">Register</button>
-    </form>
   </div>
+
+  </form>
+</div>
 </div>
 {% endblock %}
