--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
     <form action="{{ url_for('login')}}" method="POST">
       <h1>Login</h1>
       <div class="input-field">
-        <label for="username"><b>Username</b></label>
-        <input id="username" type="text" value="{{ username }}" name="username">
+        <label for="email"><b>Email</b></label>
+        <input id="email" type="text" value="{{ request.form['email'] }}" name="email">
       </div>
 
       <div class="input-field">
