--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,3 +1,3 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-<h1>Welcome {{ email }}</h1>
+<h1>Welcome {{ session.get("username") }}</h1>
 {% endblock %}
