--- a/templates/search.html
+++ b/templates/search.html
@@ -1,111 +1,138 @@
 {% extends "layout.html" %} {% block title %} Results of search {% endblock %} {%
 block content %}
-{% if not newJson["data"]%}
-<h1>No results found for {{name}}!</h1>
-{% else %}
-<h1>Results for {{name}}</h1>
-{% endif %}
+<div>
+    {% if not newJson["data"]%}
+    <h1>Your search returned no results!</h1>
+    {% else %}
+    <h1>Results for {{name}}</h1>
+    {% endif %}
 
-
-
-<section class="games-container">
-    {% for item in newJson["data"] %}
-    <div class="game-card">
-        {% if item['cover'] and item['cover']['url'] %}
-        <img src="https:{{ item['cover']['url'] }}" id="cover" />
-        {% else %}
-        <img src="https://via.placeholder.com/800x600.png?text=Placeholder+Image
-        " id="cover" />
-        {% endif %}
-        <h2>{{ item.name }}</h2>
-        <section>
-            <h3>Platforms</h3>
-            {% if item['platforms']|length %}
-            <ul class="platforms">
-                {% for platform in item["platforms"]%}
-                {% if item["platforms"]|length > 6 %}
-                {% if loop.index < 6 %} {% if platform["platform_logo"] %} <li>
-                    <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                    <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %}
-                    {% else %}
-                    {% if platform["platform_logo"] %}
-                    <li style="display: none" id='B{{item["id"]}}'>
-                        <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li style="display: none" id='B{{item["id"]}}'>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %}
-                    {% endif %}
-                    {% else %}
-                    {% if platform["platform_logo"] %}
-                    <li>
-                        <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %}
-                    {% endif %}
-                    {% endfor %}
-
-                    {% if item["platforms"]|length > 6 %}
-                    <li class="show-all-platforms-li" id='A{{item["id"]}}' onclick="showAllPlatforms(this.id)">
-                        <button id="show-all-platforms">
-                            <i id='plus-sign' class="fi fi-br-plus"></i>
-                        </button>
-                        <p class="platform-name">Show more</p>
-                    </li>
-                    {% endif %}
-            </ul>
-            {% else %}
-            <p id="no-platforms-exception">
-                No platforms were registered for this game
-            </p>
-            {% endif %}
-        </section>
-        <h3>Rating</h3>
-        <span class="rating">
-            {% if item["rating"]%}
-            <section class="stars">
-                <div class="star-rating">
-                    <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                    <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                    <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                    <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                    <img src="../static/img/Star_full.svg.png" alt="Full star" />
+    <div id="filters">
+        <form id="rating_count_form" action="/search" method="get">
+            <div class="form-container">
+                <div style="display: none;">
+                    <label for="rating_count">Title: </label>
+                    <input type="text" id="name" name="name" value="{{ name }}" />
                 </div>
-            </section>
-            {% endif %}
-        </span>
-        {% if item["rating"]%}
-        <h4 id="rating-number">({{"%.2f"|format(item['rating']/20)}}/5.00)</h4>
-        <span style="font-size: 10px">
-            Based on {{item.rating_count}} votes
-        </span>
-        {% else %}
-        <p style="font-size: 12px;">No rating registered for this game</p>
-        {% endif %}
-        <button>Details</button>
+                <label for="rating_count">Minimum rating (0-100): </label>
+                <input type="number" id="rating" name="rating" value="{{ rating }}" placeholder="50" />
+                <label for="rating_count">Minimum number of votes:</label>
+                <input type="number" id="rating_count" name="rating_count" value="{{ rating_count }}"
+                    placeholder="1000" />
+                <label for="limit">Number of games displayed:</label>
+                <input type="number" id="rating_count" name="limit" value="{{ limit }}" placeholder="20" />
+                <!-- <label for="limit">Only games with image:</label>
+                <input type="number" id="rating_count" name="limit" value="{{ limit }}" placeholder="20" />
+                <label for="limit">Only games with rating:</label>
+                <input type="number" id="rating_count" name="limit" value="{{ limit }}" placeholder="20" /> -->
+                <button type="submit">Filter</button>
+            </div>
+        </form>
+        <div id='add-filters'>
+            <button onclick="showFilters(this)">Show filters</button>
+        </div>
     </div>
-    {% endfor %}
-</section>
+
+    <section class="games-container">
+        {% for item in newJson["data"] %}
+        <div class="game-card">
+            {% if item['cover'] and item['cover']['url'] %}
+            <img src="https:{{ item['cover']['url'] }}" id="cover" />
+            {% else %}
+            <img src="https://via.placeholder.com/800x600.png?text=Placeholder+Image
+            " id="cover" />
+            {% endif %}
+            <h2>{{ item.name }}</h2>
+            <section>
+                <h3>Platforms</h3>
+                {% if item['platforms']|length %}
+                <ul class="platforms">
+                    {% for platform in item["platforms"]%}
+                    {% if item["platforms"]|length > 6 %}
+                    {% if loop.index < 6 %} {% if platform["platform_logo"] %} <li>
+                        <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+                        <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% else %}
+                        <li>
+                            <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+                                alt="Game Platform Logo" />
+                            <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% endif %}
+                        {% else %}
+                        {% if platform["platform_logo"] %}
+                        <li style="display: none" id='B{{item["id"]}}'>
+                            <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+                            <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% else %}
+                        <li style="display: none" id='B{{item["id"]}}'>
+                            <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+                                alt="Game Platform Logo" />
+                            <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% endif %}
+                        {% endif %}
+                        {% else %}
+                        {% if platform["platform_logo"] %}
+                        <li>
+                            <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
+                            <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% else %}
+                        <li>
+                            <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+                                alt="Game Platform Logo" />
+                            <p class="platform-name">{{platform['name']}}</p>
+                        </li>
+                        {% endif %}
+                        {% endif %}
+                        {% endfor %}
+
+                        {% if item["platforms"]|length > 6 %}
+                        <li class="show-all-platforms-li" id='A{{item["id"]}}' onclick="showAllPlatforms(this.id)">
+                            <button id="show-all-platforms">
+                                <i id='plus-sign' class="fi fi-br-plus"></i>
+                            </button>
+                            <p class="platform-name">Show more</p>
+                        </li>
+                        {% endif %}
+                </ul>
+                {% else %}
+                <p id="no-platforms-exception">
+                    No platforms were registered for this game
+                </p>
+                {% endif %}
+            </section>
+            <h3>Rating</h3>
+            <span class="rating">
+                {% if item["rating"]%}
+                <section class="stars">
+                    <div class="star-rating">
+                        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+                        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+                        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+                        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+                        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+                    </div>
+                </section>
+                {% endif %}
+            </span>
+            {% if item["rating"]%}
+            <h4 id="rating-number">({{"%.2f"|format(item['rating']/20)}}/5.00)</h4>
+            <span style="font-size: 10px">
+                Based on {{item.rating_count}} votes
+            </span>
+            {% else %}
+            <p style="font-size: 12px;">No rating registered for this game</p>
+            {% endif %}
+            <button>Details</button>
+        </div>
+        {% endfor %}
+    </section>
+</div>
+
 
 <script>
     // <!-- Star rating script-->
@@ -148,6 +175,21 @@ block content %}
 
         //appends the 'show less button li' to the last <li> of the game. 
         platformListItems[platformListItems.length - 1].after(newEl);
+    }
+    function showFilters(button) {
+        const rating_count_form = document.querySelector("#rating_count_form");
+        rating_count_form.style.display = "flex";
+        button.blur();
+        button.innerText = "Hide filters";
+        button.setAttribute("onclick", "hideFilters(this)");
+    }
+
+    function hideFilters(button) {
+        const rating_count_form = document.querySelector("#rating_count_form");
+        rating_count_form.style.display = "none";
+        button.blur();
+        button.innerText = "Show filters";
+        button.setAttribute("onclick", "showFilters(this)");
     }
 </script>
 {% endblock %}
